- Corrected styling issues of sub-menus - Added support for icons in side menu

--- a/src/test/resources/META-INF/resources/frontend/styles/shared-styles.html
+++ b/src/test/resources/META-INF/resources/frontend/styles/shared-styles.html
@@ -28,6 +28,10 @@
 		      max-height: 368px;
 		}
 		
+		.sub-menu{
+			background-color: var(--lumo-primary-color-10pct);
+		}
+		
 		app-toolbar {
 		  background-color: #4285f4;
 		      color: #fff;
