Add support for disabled items

--- a/src/main/resources/META-INF/resources/frontend/styles/applayout-styles.html
+++ b/src/main/resources/META-INF/resources/frontend/styles/applayout-styles.html
@@ -33,6 +33,10 @@
 		  margin-left: 24px;
 		}
 		
+		paper-icon-button {
+			--paper-icon-button-disabled-text: var(--lumo-disabled-text-color);
+		}
+		
 		paper-progress {
 		  display: block;
 		      width: 100%;
