Resolves #34 Make the menu list scrollable

--- a/src/main/resources/META-INF/resources/frontend/styles/applayout-styles.html
+++ b/src/main/resources/META-INF/resources/frontend/styles/applayout-styles.html
@@ -57,6 +57,10 @@
 		  --app-drawer-scrim-background: rgba(0, 0, 100, 0.8);
 			z-index: 1000;
 		}
+		
+		app-drawer paper-listbox {
+			overflow-y: auto;
+		}
 
     </style>
 </custom-style>
