Resolves #36 Mouse pointer in side menu should be a hand

--- a/src/main/resources/META-INF/resources/frontend/styles/applayout-styles.html
+++ b/src/main/resources/META-INF/resources/frontend/styles/applayout-styles.html
@@ -62,5 +62,11 @@
 			overflow-y: auto;
 		}
 
+		app-drawer paper-item, 
+		app-drawer paper-icon-item,
+		app-drawer iron-collapse-button {
+			cursor: pointer;
+		}
+		
     </style>
 </custom-style>
