Add support for menu separator with optional label #37

--- a/src/main/resources/META-INF/resources/frontend/styles/applayout-styles.html
+++ b/src/main/resources/META-INF/resources/frontend/styles/applayout-styles.html
@@ -38,6 +38,10 @@
 		  --app-drawer-scrim-background: rgba(0, 0, 100, 0.8);
 			z-index: 1000;
 		}
+		
+		app-drawer fc-separator {
+			margin: 0 8px;
+		}
 			
 		app-drawer paper-listbox {
 			overflow-y: auto;
