Fix styles for nested submenus

--- a/src/main/resources/META-INF/resources/frontend/styles/applayout-styles.html
+++ b/src/main/resources/META-INF/resources/frontend/styles/applayout-styles.html
@@ -53,15 +53,10 @@
 	  		scroll-snap-stop: always;
 	  		display: block;
 		}		
+
+		fc-menuitem fc-menuitem {
+			background-color: var(--lumo-primary-color-10pct);
+		}
     </style>    
 </custom-style>
 
-<dom-module id="fc-submenu-theme" theme-for="fc-submenu">
-	<template>
-		<style>
-			:host [slot='collapse-content'] {
-				background-color: var(--lumo-primary-color-10pct);
-			}
-		</style>
-	</template>
-</dom-module>
